[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/UI/Backgrounds/background1.jpg" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/goldcoin.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/artpalette.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Scenes/StoreScene.gd" type="Script" id=5]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_left = 24

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 85, 70 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=16]
size = 32
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 40
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.54902 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_right = 1920.0
margin_bottom = 936.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MoneyPanel" type="Panel" parent="."]
margin_left = 1592.0
margin_right = 1920.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSprite" type="AnimatedSprite" parent="MoneyPanel"]
position = Vector2( 152.555, 30.6574 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
frame = 1
playing = true

[node name="APSprite" type="AnimatedSprite" parent="MoneyPanel"]
position = Vector2( 302.156, 19.6883 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 14 )

[node name="CoinLabel" type="Label" parent="MoneyPanel"]
margin_right = 128.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APLabel" type="Label" parent="MoneyPanel"]
margin_left = 164.0
margin_right = 272.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 1920.0
margin_bottom = 936.0
custom_fonts/font = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Characters" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 64.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LeftBox" type="VBoxContainer" parent="TabContainer/Characters"]
margin_left = -4.0
margin_top = -8.0
margin_right = 316.0
margin_bottom = 874.0
rect_min_size = Vector2( 320, 882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Characters"]
margin_left = 380.0
margin_top = 64.0
margin_right = 1916.0
margin_bottom = 872.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Characters/Panel"]
margin_left = 64.0
margin_top = 64.0
margin_right = 1536.0
margin_bottom = 808.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Characters/Panel/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Characters/Panel/ScrollContainer/VBoxContainer"]
custom_constants/separation = 128

[node name="Skins" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 64.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LeftBox" type="VBoxContainer" parent="TabContainer/Skins"]
margin_left = -4.0
margin_top = -8.0
margin_right = 316.0
margin_bottom = 874.0
rect_min_size = Vector2( 320, 882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Skins"]
margin_left = 380.0
margin_top = 64.0
margin_right = 1916.0
margin_bottom = 872.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Skins/Panel"]
margin_left = 64.0
margin_top = 64.0
margin_right = 1536.0
margin_bottom = 808.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Skins/Panel/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Skins/Panel/ScrollContainer/VBoxContainer"]
custom_constants/separation = 128
